<resources>
    <string name="app_name">NYU Bus Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_routes">Edit Routes</string>
    <string name="header_routes">Routes</string>
    <string name="button_add_route">ADD</string>

    <string name="title_activity_route">RouteActivity</string>

    <string name="header_leave_at">Leave At:</string>
    <string name="header_arrive_at">Arrive By:</string>
    <string name="button_time_now">NOW</string>

    <string name="label_select_route">Select Route: </string>
    <string name="label_type_route_name">From stop: </string>
    <string name="label_select_route_src">From stop: </string>
    <string name="label_select_route_dest">To stop: </string>
    <string name="button_save_route">SAVE</string>
</resources>
